[workspace]
members = [
    "cosmos_message_api",
    "cosmos_context",
    "cosmos_schema",
    "cosmos_schema_macros",
    "cosmos_core",
    "cosmos_core_macros",
    "state_objects",
    "state_objects_macros",
    "cosmos_state_api",
    "cosmos_vm_api",
    "cosmos_hypervisor",
    "cosmos_error",
    "_scratch",
    "_examples/flipper", "cosmos_testing"
]
resolver = "2"
